# wasmsh

./: README.md  TODO.md  create_wasm_tool.sh
docs/: book.toml
docs/src/: SUMMARY.md  contributing.md  installation.md  introduction.md
wasm-cat/: Cargo.toml
wasm-cat/src/: main.rs
wasm-cat/tests/: integration_test.rs
wasm-chmod/: Cargo.toml
wasm-chmod/src/: main.rs
wasm-chmod/tests/: integration_test.rs
wasm-cp/: Cargo.toml
wasm-cp/src/: main.rs
wasm-curl/: Cargo.toml
wasm-curl/src/: main.rs
wasm-date/: Cargo.toml
wasm-date/src/: main.rs
wasm-df/: Cargo.toml
wasm-df/src/: main.rs
wasm-df/tests/: integration_test.rs
wasm-diff/: Cargo.toml
wasm-diff/src/: main.rs
wasm-diff/tests/: integration_test.rs
wasm-du/: Cargo.toml
wasm-du/src/: main.rs
wasm-du/tests/: integration_test.rs
wasm-echo/: Cargo.toml
wasm-echo/src/: main.rs
wasm-find/: Cargo.toml
wasm-find/src/: main.rs
wasm-find/tests/: integration_test.rs
wasm-grep/: Cargo.toml
wasm-gzip/: Cargo.toml
wasm-head/: Cargo.toml
wasm-hostname/: Cargo.toml
wasm-ln/: Cargo.toml
wasm-ln/src/: main.rs
wasm-ls/: Cargo.toml
wasm-mkdir/: Cargo.toml
wasm-mv/: Cargo.toml
wasm-pwd/: Cargo.toml
wasm-rand/: Cargo.toml
wasm-rm/: Cargo.toml
wasm-rmdir/: Cargo.toml
wasm-sort/: Cargo.toml
wasm-tail/: Cargo.toml
wasm-tar/: Cargo.toml
wasm-touch/: Cargo.toml
wasm-uname/: Cargo.toml
wasm-uniq/: Cargo.toml
wasm-wc/: Cargo.toml
wasm-wget/: Cargo.toml
wasm-whoami/: Cargo.toml
wasm-zip/: Cargo.toml
wasmsh/: Cargo.toml  README.md
wasmsh/src/: main.rs
(+65 files in other folders)
