[package]
name = "wasmsh"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
wasmtime = "19.0.0"
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.82"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
dirs = "5.0.1"
oci-distribution = "0.8.0"
futures-util = "0.3.30"
toml = "0.8.12"
rustyline = "14.0.0"
